--- a/folder_parser/.vscode/settings.json
+++ b/folder_parser/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "${workspaceFolder}/venv/bin/python"
+    "python.pythonPath": "/Users/vados/projects/lyre/venv/bin/python"
 }
